--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>Catch it!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
+  <link rel = "website icon" type = "png"
+   href = "logo.png" />
 </head>
 <body>
   <div id="intro-screen">
@@ -33,6 +36,7 @@
 
   <audio id="pop-sound" src="sound.mp3"></audio>
   <audio id="gameover-sound" src="gameover.mp3"></audio>
+  <audio id="miss-sound" src="missSound.mp3"></audio>
 
   <script src="script.js"></script>
 </body>
