--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     </div>
     <p id="score">Score: 0</p>
     <p id="best-score">Best Score: <span id="best-score-value">0</span></p>
-    <p id="misses">Misses: 0 / 3</p>
+    <p id="lives-container">
+      <span class="heart-icon">❤️</span>
+      <span class="heart-icon">❤️</span>
+      <span class="heart-icon">❤️</span>
+    </p>
     <button id="restart-btn" style="display: none;">Play Again</button>
     <button id="reset-record">Reset Record</button>
     <div id="message-right" class="motivate right">Focus!</div>
