--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <audio id="pop-sound" src="sound.mp3"></audio>
   <audio id="gameover-sound" src="gameover.mp3"></audio>
   <audio id="miss-sound" src="missSound.mp3"></audio>
+  <audio id="win-sound" src="win.mp3"></audio>
 
   <script src="script.js"></script>
 </body>
